# LinuxTrader

./: CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
benchmark/: CMakeLists.txt  benchmark.cpp
unit_test/: CMakeLists.txt  bin_file_reader.cpp  bin_file_reader.h  bin_file_reader_test.cpp  unit_test.cpp
